--- a/portfolio.css
+++ b/portfolio.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    cursor: none; /* Hide the default cursor */
 }
 
 .parallax {
@@ -35,6 +36,7 @@ body {
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 1;
+    
 }
 
 .text-overlay h1 {
@@ -155,25 +157,19 @@ footer {
 }
 
 .cursor {
-    display: none;
+    display: block;
+    position: fixed;
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
+    border-radius: 50%;
     pointer-events: none;
-    will-change: transform;
-    mix-blend-mode: difference;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    transition: width 0.2s, height 0.2s;
 }
 
-@media screen and (min-width: 769px) {
-    .cursor {
-        display: block;
-        position: fixed;
-        width: 20px;
-        height: 20px;
-        background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 9999;
-        transition: transform 0.1s ease;
-    }
-}
+
 
 
 
