--- a/portfolio.css
+++ b/portfolio.css
@@ -296,6 +296,7 @@ footer {
     margin-bottom: 30px;
     text-transform: uppercase;
     letter-spacing: 2px;
+    text-align:center
 }
 
 #contact h2 {
