--- a/portfolio.css
+++ b/portfolio.css
@@ -36,9 +36,7 @@ body {
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 1;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
-
-    
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .text-overlay h1 {
@@ -97,26 +95,19 @@ body {
     transition: color 0.3s ease;
 }
 
-
-
-
-
 /* Sections */
 #home, #about {
     padding: 60px 20px;
     text-align: center;
-     opacity: 0;
+    opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
-home.animate, #about.animate {
+
+#home.animate, #about.animate {
     opacity: 1;
     transform: translateY(0);
 }
-
-
-
-
 
 .services-container {
     display: grid;
@@ -186,10 +177,6 @@ footer {
     transition: width 0.2s, height 0.2s;
 }
 
-
-
-
-
 @media screen and (max-width: 768px) {
     .services-container {
         padding: 3rem 1rem;
@@ -200,10 +187,6 @@ footer {
         font-size: 1.5rem;
     }
 }
-
-
-
-
 
 .projects-container {
     padding: 6rem 4rem;
@@ -279,9 +262,6 @@ footer {
     font-size: 1em;
 }
 
-
-
-
 @media screen and (max-width: 768px) {
     .projects-container {
         padding: 3rem 1rem;
@@ -297,8 +277,6 @@ footer {
     }
 }
 
-
-
 #contact {
     background: linear-gradient(135deg, #1a1a1a, #000);
     padding: 60px 50px;
@@ -311,7 +289,7 @@ footer {
     margin-bottom: 30px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    text-align:center
+    text-align: center;
 }
 
 #contact h2 {
@@ -370,4 +348,3 @@ footer {
         font-size: 2em;
     }
 }
-
