--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -53,7 +53,7 @@ header {
 }
 
 .nav-menu {
-    position: fixed;
+    position: relative ;
     top: 0;
     left: -300px;
     width: 250px;
@@ -68,14 +68,17 @@ header {
 }
 
 .nav-menu ul {
-    top: 60px
-    padding: 50px 0 0 0;
+   position: absolute;
+    top: 50%
+    padding: 0;
+    transform: translateY(-50%); /* Center it vertically */
     list-style: none;
     margin: 0;
 }
 
 .nav-menu ul li {
     padding: 15px 30px;
+    margin-bottom: 20px;
 }
 
 .nav-menu ul li a {
@@ -86,6 +89,17 @@ header {
     text-decoration: none;
     transition: color 0.3s ease;
 }
+
+@media screen and (max-height: 600px) {
+  nav ul {
+    top: 40%; /* Move list higher on smaller screens */
+  }
+  
+  nav ul li {
+    margin-bottom: 15px; /* Reduce spacing on smaller screens */
+  }
+}
+
 
 /* Calendar Container */
 .calendar {
