--- a/portfolio.css
+++ b/portfolio.css
@@ -105,6 +105,18 @@ body {
      font-size: 3rem;
     font-weight: bold;
     text-transform: uppercase;
+    animation: bounce 0.6s infinite alternate;
+}
+
+@keyframes bounce {
+    from {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    to {
+        transform: translateY(-1rem);
+        opacity: 0.8;
+    }
 }
 
 #about{
@@ -186,9 +198,30 @@ footer {
         gap: 1.5rem;
     }
     
+    
     .tagline h1 {
         font-size: 1.5rem;
     }
+   
+    #home {
+    padding: 60px 20px;
+    text-align: center;
+     font-size:  font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+        animation: bounce 0.6s infinite alternate;
+}
+
+@keyframes bounce {
+    from {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    to {
+        transform: translateY(-1rem);
+        opacity: 0.8;
+    }
+}
 }
 
 .projects-container {
@@ -337,11 +370,10 @@ footer {
     box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
 }
 
-@media screen {
+@media screen and (max-width: 768px) {
     #contact {
         padding: 40px 20px;
     }
-    
     #contact h1 {
         font-size: 2.5em;
     }
