--- a/portfolio.css
+++ b/portfolio.css
@@ -206,7 +206,7 @@ footer {
     #home {
     padding: 60px 20px;
     text-align: center;
-     font-size:  font-size: 1.5rem;
+    font-size: 1.5rem;
     font-weight: bold;
     text-transform: uppercase;
         animation: bounce 0.6s infinite alternate;
