--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -239,6 +239,8 @@ header {
         margin: 10px auto;
         padding: 15px;
         border-radius: 15px;
+        height: 60px;
+
     }
     .popup-content {
         height: 15%;
@@ -248,6 +250,11 @@ header {
         padding: auto;
         top: 300px;
     }
+
+    .subtext{
+        padding: 0 15px;
+    }
+    
     .close {
     position: absolute;
     top: 10px;
@@ -279,6 +286,10 @@ header {
         margin: 5px auto;
         padding: 10px;
         border-radius: 10px;
+    }
+
+       .subtext{
+        padding: 0 15px;
     }
     .popup-content {
         height: 15%;
